fix: font sizes on mobile

--- a/src/styles/elements/_elements.text.css
+++ b/src/styles/elements/_elements.text.css
@@ -11,9 +11,19 @@ h2 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2em;
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 1.4em;
+}
+
+@media screen and (min-width: 640px) {
+  h1 {
+    font-size: 3em;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
 }
